# AntWars

./: Ant.cpp  Ant.h  Beetle.cpp  Beetle.h  CMakeLists.txt  Creature.cpp  Creature.h  Main.cpp  README.md  expected.txt  world.txt  world1.txt
